# DS

./: README.md
P1/S2M2/visitante_nuevo/: CMakeLists.txt
P1/S2M2/visitante_nuevo/include/: Bus.h  Cliente.h  ComponenteEquipo.h  Disco.h  Equipo.h  Tarjeta.h  VisitanteEquipo.h  VisitantePrecio.h  VisitantePrecioDetalle.h
P1/S2M2/visitante_nuevo/src/: Bus.cpp  ComponenteEquipo.cpp  Disco.cpp  Equipo.cpp  Tarjeta.cpp  VisitanteEquipo.cpp  VisitantePrecio.cpp  VisitantePrecioDetalle.cpp  main.cpp
P4/: .flutter-plugins  .flutter-plugins-dependencies  .packages  pubspec.yaml
P4/.dart_tool/: package_config.json  package_config_subset
P4/lib/: AccesoAPI.dart  Controlador.dart  Producto.dart  Usuario.dart  VistaModelo.dart  WidgetCompra.dart  WidgetInicio.dart  WidgetMyApp.dart  WidgetMyHomePage.dart  WidgetPaginaPrincipal.dart  WidgetProducto.dart  WidgetRegistro.dart  main.dart
P4/test/: integration_test.dart  unity_test.dart  widget_test.dart
p2/coverage/: lcov.info
p3/.dart_tool/: package_config.json  package_config_subset
p3/android/app/: build.gradle
practica2/: .packages  pubspec.yaml
practica2/.dart_tool/: package_config.json  package_config_subset
practica2/android/: local.properties
practica2/ios/Flutter/: Generated.xcconfig  (+1 more)
practica2/lib/: CadenaFiltros.dart  Cliente.dart  EstadoProducto.dart  Filtro.dart  FiltroDistancia.dart  FiltroEstadoproducto.dart  FiltroPrecio.dart  FiltroTipoProducto.dart  GestorFiltros.dart  Objetivo.dart  Producto.dart  TipoProducto.dart  Vista.dart  main.dart
practica2/test/: widget_test.dart
(+1340 files in other folders)
